# abbeville

./: README.md  abbeville.py  generate_blasons.py  pyproject.toml
data/: blasons.csv  donnees_communes.csv
templates/: index.html
